# sendermess

./: .gitignore  README.md  main.py  pyproject.toml
backend/: main.py  pyproject.toml
backend/senders/: __init__.py  telegram.py  types_.py  utils.py  whatsapp.py
senders/: telegram.py  types_.py  utils.py  whatsapp.py
